# reduce-plugin-system

./: .gitignore  Cargo.toml  Readme.md  index.html  package-lock.json  package.json  rps.toml  rsw.toml  swagger.json  test-babel.js  vite.config.js
.rsw/: rsw.crates  rsw.err  rsw.info
doc/: wasm_work.md
src/: App.jsx  Layout.jsx  data.js  main.jsx  render.jsx  router.jsx
src-builtin-plugin/code-editor/: package-lock.json  package.json  (+1 more)
src-mock-backend/: server.js
src-reduce-plugin-system/: .swcrc  Cargo.toml  Cargo.tomlx  LICENSE_MIT  README.md  package-lock.json  package.json  spack.config.js  test.js
src-reduce-plugin-system/src/: b.js  index.js  lib.rs  main.rs  main1.rs
src-reduce-plugin-system/src/app/: Readme.md  mod.rs
src-reduce-plugin-system/src/app/adaptation/: mod.rs
src-reduce-plugin-system/src/app/code/: mod.rs
src-reduce-plugin-system/src/app/dsl/: mod.rs
src-reduce-plugin-system/src/app/dsl/components/: components.json
src-reduce-plugin-system/src/app/dsl/kit/: computing_thinking.json  fake_generate.jsx
src-reduce-plugin-system/src/app/engine/: mod.rs
src-reduce-plugin-system/src/app/plugin/: mod.rs
src-reduce-plugin-system/src/app/service/: mod.rs
src-reduce-plugin-system/src/app/traits/: mod.rs
src-reduce-plugin-system/src/app/ui/: mod.rs
src-reduce-plugin-system/src/builtin/components/: pages.json
src-reduce-plugin-system/src/engine/: Readme.md  mod.rs
src-reduce-plugin-system/src/engine/code/: mod.rs
src-reduce-plugin-system/src/engine/service/: mod.rs
src-reduce-plugin-system/src/engine/ui/: mod.rs
(+59 files in other folders)
