[package]
name = "src-reduce-plugin-system"
version = "0.1.0"
authors = ["happysmile <812024380@qq.com>"]
edition = "2021"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
swc = "0.260.17"
swc_atoms = "0.5.3"
swc_common = "0.31.3"
swc_ecma_ast = "0.103.3"
swc_ecma_parser = "0.133.6"
swc_ecma_transforms = "0.217.9"
swc_ecma_transforms_base = "0.126.7"
swc_ecma_transforms_compat = "0.152.8"
swc_ecma_transforms_react = "0.172.9"
swc_ecma_transforms_typescript = "0.176.9"
swc_ecma_visit = "0.89.3"
